Improve: Spotless formatting